Discussion & results shuffling

--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -199,3 +199,11 @@ De-Anonymization Attack on Ethereum", Computer Science 9 project},
     year = {2023},
     url = {https://eprint.iacr.org/2023/1241}
 }
+
+@article{EthereumAttackDefense2024,
+    title        = {Ethereum proof-of-stake attack and defense},
+    author       = {ethereum.org},
+    year         = {2024},
+    note         = {Accessed: 22-10-2024},
+    url = {https://ethereum.org/en/developers/docs/consensus-mechanisms/pos/attack-and-defense/}
+}
