--- a/report/src/sections/aa-appendix.tex
+++ b/report/src/sections/aa-appendix.tex
@@ -6,3 +6,4 @@
 \input{sections/appendix/01-appendix}
 \input{sections/appendix/02-thm1proof}
 \input{sections/appendix/03-bpplus}
+\input{sections/appendix/04-shuffling-times}
