--- a/report/src/sections/07-discussion.tex
+++ b/report/src/sections/07-discussion.tex
@@ -52,7 +52,7 @@ Attacks like the $>-50\%$ stake attack and the $33\%$ finality attack~\cite{Ethe
 Because of attacks like these, which rely on controlling a large number of validators, we would recommend that when evaluating how many honest shuffles should be necessary to make the shuffle secure, one should also take into account how many honest validators are necessary to make the blockchain secure.
 
 Another thing to keep in mind is that within the Ethereum system not every validator is owned by a different person.
-Some nodes contain multiple validators, and this means that during the shuffling phase, when selecting the 16384 possible proposers, the chance that a single individual controls multible of the chosen validators.
+Some nodes contain multiple validators, and this means that during the shuffling phase, when selecting the 16384 possible proposers, there is a chance that a single node controls multiple of the chosen validators.
 This is also possible during the selecting of the shufflers.
 
 
