Began future work

--- a/report/src/sections/09-future-works.tex
+++ b/report/src/sections/09-future-works.tex
@@ -1,4 +1,6 @@
-
-
 \section{Future work}\label{sec:future-works}
-This is the future work.
+In this section we will focus on where there is still room for improvement in the Whisk protocol.
+
+The main modification from Curdleproofs to CAAUrdleproofs is the added flexibilty in choosing the shuffle size for Whisk.
+Hence, a topic to delve into in the future could be more structural modifications.
+As seen in~\autoref{sec:curdleproofs-weighted-inner-product-argument-modification-attempt}, we tried this, but found that we did not have time to follow through, as it seemed that significant structural changes were needed.
