Removed dummy gls

--- a/report/src/sections/00-abstract.tex
+++ b/report/src/sections/00-abstract.tex
@@ -1,6 +1,6 @@
 
 \begin{abstract}
-    This is the abstract~\gls{zkp}~\cite{greenwade1993}.
+    This is the abstract~\cite{greenwade1993}.
 \end{abstract}
 
 \begin{IEEEkeywords}
