Appendix mentioned in paper now instead of section

--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -24,7 +24,7 @@ The results for the verifying time also show that the verifying time jumps up qu
 Though, this seems to not be the case, at least not as aggressively, when increasing $\ell$ from 128.
 We find, however, that the bump is smaller the higher $\ell$ is.
 
-Additional to the proving and verifying times, the time used on shuffling is also lower for any $\ell$ that is not a power of 2; see~\autoref{sec:shuffling-results}.
+Additional to the proving and verifying times, the time used on shuffling is also lower for any $\ell$ that is not a power of 2; see Appendix~\autoref{app:shuffling-times}.
 Though, that was to be expected since CAAUrdleproofs uses the same shuffling algorithm as Curdleproofs, but does not have to add additional padding to the non-power of 2 input sizes.
 
 
