Made labels for appendix

--- a/report/src/sections/aa-appendix.tex
+++ b/report/src/sections/aa-appendix.tex
@@ -3,7 +3,7 @@
 
 % Main appendix file
 % Insert appendix sections below
-\input{sections/appendix/01-appendix}
-\input{sections/appendix/02-thm1proof}
-\input{sections/appendix/03-bpplus}
-\input{sections/appendix/04-shuffling-times}
+\input{sections/appendix/01-appendix}\label{app:definitions}
+\input{sections/appendix/02-thm1proof}\label{app:thm1proof}
+\input{sections/appendix/03-bpplus}\label{app:bpplus}
+\input{sections/appendix/04-shuffling-times}\label{app:shuffling-times}
