--- a/report/src/sections/03-related-work.tex
+++ b/report/src/sections/03-related-work.tex
@@ -48,7 +48,7 @@ Bulletproofs also has had a few iterations and improvements to increase the spee
 One of these is Bulletproofs+~\cite{chung2022bulletproofs+} which uses a weighted inner product argument instead of the standard inner product argument to achieve a better performance.
 Bulletproofs+ is also a zero-knowledge proof by itself unlike the original bulletproofs.
 Trying to modify Curdleproofs with the weighted inner product argument introduces complications that would need larger modifications and is therefore not suitable.
-This can be seen in Appendix~\autoref{app:bpplus}
+This can be seen in Appendix~\ref{app:curdleproofs-weighted-inner-product-argument-modification-attempt}
 
 A third version of the Bulletproofs protocol is Bulletproofs++~\cite{eagen2024bulletproofs++} which uses a new type of argument called the norm argument to achieve a better performance.
 This comes from the prover only needing to commit to a single vector, rather than two.
