--- a/report/src/sections/appendix/03-bpplus.tex
+++ b/report/src/sections/appendix/03-bpplus.tex
@@ -1,2 +1,3 @@
 
-\section{Curdleproofs Weighted Inner Product Argument Modification Attempt}\label{sec:curdleproofs-weighted-inner-product-argument-modification-attempt}
+\section{Curdleproofs Weighted Inner Product Argument Modification Attempt}\label{app:curdleproofs-weighted-inner-product-argument-modification-attempt}
+We have made code for the~\gls{ipa} in the Curdleproofs repository which actually works with Bulletproofs+' Weighted Inner Product Argument.
