--- a/report/src/setup/acronyms.tex
+++ b/report/src/setup/acronyms.tex
@@ -28,6 +28,6 @@
 \newacronym{samemsm}{SameMSM}{Same Multiscalar Multiplication}
 \newacronym{rrc}{RRC}{re-randomizable commitment}
 \newacronym{eth}{ETH}{Ether}
-\newacronym{grandprod}{GrandProd}{Grand Product Argument}
+\newacronym{grandprod}{GrandProd}{Grand Product}
 \newacronym{dlipa}{DL IPA}{Discrete-Logarithm Inner Product Argument}
 
