--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -65,7 +65,7 @@ Our work therefore runs as a public coin protocol in any cryptographic group whe
 Before explaining the protocol, we must mention that Curdleproofs, and hence also Whisk, is a~\gls{zkp} system.
 It is a system that allows a prover to convince a verifier that they know a secret without revealing the secret itself.
 Within the context of Ethereum, it could be the ability to convince someone that a transaction is valid without revealing information about the transaction such as the value of it.
-In Whisk, it uses Curdleproofs to prove the validity of a shuffle.
+Whisk uses Curdleproofs to prove the validity of a shuffle.
 
 \begin{definition}[Zero-Knowledge Argument of Knowledge]
     An argument $(Setup, P, V)$ is a zero-knowledge argument of knowledge of a relation $\mathbb{R}$ if it satisfies completeness, knowledge-soundness and is honest-verifier zero-knowledge.
