--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -13,7 +13,7 @@ After running the experiment where Curdleproofs and CAAUrdleproofs were compared
 \end{figure*}
 
 As mentioned in \autoref{sec:CAAUrdleproof-experiment}, CAAUrdleproofs was run with a shuffle size $\ell$ of $\{8,9,\dots,256\}$.
-Curdleproofs was only run with a shuffle size $\ell$ of $\{8,16,32,64,128,256\}$, as it is only able to run in powers of 2.
+Curdleproofs was only run with a shuffle size $\ell = s^N$ of $N = \{3,4,5,6,7,8\}$, as it is only able to run in powers of 2.
 This is why the results for Curdleproofs show the shuffle size,~$\ell$, instantly going up to the next power of 2, because it theoretically would have to pad the input set until it reached the next power of 2.
 
 From the results, we can see that CAAUrdleproofs and Curdleproofs have similar proving and verifying times when~$\ell$ is a power of 2.
@@ -43,7 +43,7 @@ Though, that was to be expected since CAAUrdleproofs uses the same shuffling alg
 
 The results of the shuffle security experiment are shown in \autoref{fig:shufflesecurity}.
 
-\autoref{fig:shufflesecurity} shows the mean of the 1000 runs of each shuffle size $\ell$ as well as one standard deviation higher and lower.
+\autoref{fig:shufflesecurity} shows the mean of the 1000 runs of each shuffle size $\ell$ and the standard deviation.
 
 We can see that the bigger the shuffle size $\ell$ is, the less honest shuffles are necessary to make the shuffle secure.
 In Ethereum, each shuffling phase is limited to 8192 shuffles, meaning that the maximum number of honest shuffles that can be used is 8192.
@@ -76,6 +76,9 @@ Here we see a trend that the lower the~$\alpha$ is, the earlier the dip happens.
 
 The results in \autoref{fig:shufflesecurityviolin} show that for all three $\alpha$ values, the spread of the necessary honest shuffles tightens the larger the shuffle size $\ell$ gets.
 Like the results in \autoref{fig:shufflesecurity}, \autoref{fig:shufflesecurityviolin} also shows that the bigger a shuffle size $\ell$, the less honest shuffles on average are necessary to make the shuffle secure.
+
+We can also see that the widest point of the violin plot is below the mean.
+This means that the outliers are a lot more significant above the mean than below it.
 
 It is worth noting that there is a spike in the distribution of the necessary honest shuffles at $\ell=32$ for $\alpha=4096$.
 This spike is not present for the other two $\alpha$ values, and is due to the probabilistic nature of the shuffling method.
