--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -23,8 +23,16 @@
     title        = {Whisk: A practical shuffle-based SSLE protocol for Ethereum},
     author       = {George Kadianakis},
     year         = {2024},
-    note         = {Accessed: 22-10-2024},
+    note         = {Accessed: 16-05-2025},
     url = {https://ethresear.ch/t/whisk-a-practical-shuffle-based-ssle-protocol-for-ethereum/11763}
+}
+
+@article{pqwhisk,
+    title        = {Towards practical post quantum Single Secret Leader Election (SSLE) - Part 1},
+    author       = {Antonio Sanso},
+    year         = {2022},
+    note         = {Accessed: 02-06-2025},
+    url = {https://crypto.ethereum.org/blog/pq-ssle}
 }
 
 @misc{cryptoeprint:2022/560,
@@ -198,4 +206,21 @@ De-Anonymization Attack on Ethereum", Computer Science 9 project},
     howpublished = {Cryptology {ePrint} Archive, Paper 2023/1241},
     year = {2023},
     url = {https://eprint.iacr.org/2023/1241}
+}
+
+@inproceedings{10.1007/978-3-030-03332-3_15,
+    author = {Castryck, Wouter and Lange, Tanja and Martindale, Chloe and Panny, Lorenz and Renes, Joost},
+    title = {CSIDH: An Efficient Post-Quantum Commutative Group Action},
+    year = {2018},
+    isbn = {978-3-030-03331-6},
+    publisher = {Springer-Verlag},
+    address = {Berlin, Heidelberg},
+    url = {https://doi.org/10.1007/978-3-030-03332-3_15},
+    doi = {10.1007/978-3-030-03332-3_15},
+    abstract = {We propose an efficient commutative group action suitable for non-interactive key exchange in a post-quantum setting. Our construction follows the layout of the Couveignes–Rostovtsev–Stolbunov cryptosystem, but we apply it to supersingular elliptic curves defined over a large prime field Fp, rather than to ordinary elliptic curves. The Diffie–Hellman scheme resulting from the group action allows for public-key validation at very little cost, runs reasonably fast in practice, and has public keys of only 64 bytes at a conjectured AES-128 security level, matching NIST’s post-quantum security category I.},
+    booktitle = {Advances in Cryptology – ASIACRYPT 2018: 24th International Conference on the Theory and Application of Cryptology and Information Security, Brisbane, QLD, Australia, December 2–6, 2018, Proceedings, Part III},
+    pages = {395–427},
+    numpages = {33},
+    keywords = {Post-quantum cryptography, Class-group action, Isogeny-based cryptography, Non-interactive key exchange, Key confirmation},
+    location = {Brisbane, QLD, Australia}
 }
