--- a/report/src/sections/09-future-works.tex
+++ b/report/src/sections/09-future-works.tex
@@ -17,7 +17,8 @@ Using isogenies, a hard problem comes up, namely the~\gls{gaip}.
 \begin{definition}[Group Action Inverse Problem (GAIP)]
     Given a curve $E$, with $End(E)=O$, find an ideal $a\subset O$ such that $E=[a]E_0$
 \end{definition}
-Using this problem, an almost one to one conversion into using post-quantum cryptography can be done on Whisk, as shown by Sanso~\cite{pqwhisk}.
+This problem somewhat resembles the discrete logarithm problem.
+Hence, using this problem, an almost one to one conversion using post-quantum cryptography can be done on Whisk, as shown by Sanso~\cite{pqwhisk}.
 At the moment, though, there does not exist a~\gls{nizk} proof of shuffle based on isogenies.
 
 
