--- a/report/src/sections/09-future-works.tex
+++ b/report/src/sections/09-future-works.tex
@@ -28,4 +28,4 @@ But because upcoming proposers are published as trackers that only the chosen va
 Though, as found by Heimbach et al.~and confirmed by ourselves, the execution of the~\gls{dos} attack is only half the attack~\cite{heimbach2024deanonymizingethereumvalidatorsp2p,ouroldpaper}.
 Even if the blockchain is using Whisk, it is still possible for an adversary to gather and de-anonymize validator IP addresses only by running a node on the network.
 A sustainable solution for this therefore needs to be found.
-Currently, ideas such as $k$-anonymity, where nodes group together in $k$-size groups and randomize who sends routine messages to the network, have been proposed.
+Though, Ethereum is a system that encourages transparency, so a possible solution should keep this in mind.
