--- a/report/src/sections/07-discussion.tex
+++ b/report/src/sections/07-discussion.tex
@@ -56,7 +56,7 @@ Some nodes contain multiple validators, and this means that during the shuffling
 This is also possible during the selecting of the shufflers.
 
 From the results we see that the mean starts higher and ends lower for the experiments with a higher $\alpha$.
-One of the reasons for the could be the relationship between the number of adversarial tracked cups and the threshold necessary before the shuffle is secure.
+One of the reasons for this could be the relationship between the number of adversarial tracked cups and the threshold necessary before the shuffle is secure.
 Since the threshold is $2/(n-\alpha)$ the higher $\alpha$ is, the higher the threshold for the amount of water allowed in any cup.
 Therefore, the higher $\alpha$ is, the less the water needs to be divided be the harder it is to get the initial 1 unit of water divided.
 And opposite to this the lower $\alpha$ is, the more evenly the water needs to be divided, and therefore the harder it is to get the every cup below the lower threshold.
