added Ethereum attack defense source

--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -224,3 +224,11 @@ De-Anonymization Attack on Ethereum", Computer Science 9 project},
     keywords = {Post-quantum cryptography, Class-group action, Isogeny-based cryptography, Non-interactive key exchange, Key confirmation},
     location = {Brisbane, QLD, Australia}
 }
+
+@article{EthereumAttackDefense2024,
+    title        = {Ethereum proof-of-stake attack and defense},
+    author       = {ethereum.org},
+    year         = {2024},
+    note         = {Accessed: 22-10-2024},
+    url = {https://ethereum.org/en/developers/docs/consensus-mechanisms/pos/attack-and-defense/}
+}
